resultatsMoulinette/02-Tests.txt
-- The CXX compiler identification is GNU 12.2.0
-- The C compiler identification is GNU 12.2.0
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /usr/bin/cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Success
-- Found Threads: TRUE  
-- Configuring done
-- Generating done
-- Build files have been written to: /home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/build
[ 25%] Building CXX object CMakeFiles/testfa.dir/Automaton.cc.o
[ 50%] Building CXX object CMakeFiles/testfa.dir/testfa.cc.o
/home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/testfa.cc: In member function ‘virtual void PresetsTest::SetUp()’:
/home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/testfa.cc:275:37: error: ‘class fa::Automaton’ has no member named ‘m_alphabet’
  275 |     alternateLetterAThenBComplement.m_alphabet = alternateLetterAThenB.m_alphabet;
      |                                     ^~~~~~~~~~
/home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/testfa.cc:275:72: error: ‘class fa::Automaton’ has no member named ‘m_alphabet’
  275 |     alternateLetterAThenBComplement.m_alphabet = alternateLetterAThenB.m_alphabet;
      |                                                                        ^~~~~~~~~~
/home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/testfa.cc:276:37: error: ‘class fa::Automaton’ has no member named ‘m_statesTransitions’; did you mean ‘makeTransition’?
  276 |     alternateLetterAThenBComplement.m_statesTransitions = alternateLetterAThenB.m_statesTransitions;
      |                                     ^~~~~~~~~~~~~~~~~~~
      |                                     makeTransition
/home/jube/Univ/theorie_des_langages/projet/corr/2023/sandbox-tests/testfa.cc:276:81: error: ‘class fa::Automaton’ has no member named ‘m_statesTransitions’; did you mean ‘makeTransition’?
  276 |     alternateLetterAThenBComplement.m_statesTransitions = alternateLetterAThenB.m_statesTransitions;
      |                                                                                 ^~~~~~~~~~~~~~~~~~~
      |                                                                                 makeTransition
make[2]: *** [CMakeFiles/testfa.dir/build.make:90 : CMakeFiles/testfa.dir/testfa.cc.o] Erreur 1
make[1]: *** [CMakeFiles/Makefile2:83 : CMakeFiles/testfa.dir/all] Erreur 2
make: *** [Makefile:91 : all] Erreur 2
